--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,18 +17,22 @@ body
 .special-font-2
   color: $secondary-color
 
+h2
+  font-weight: normal
+  margin: 15px auto 10px auto
+
 button
   font-size: $font-size-default
 
 button.btn-primary
   // float: right
-  padding: 3%
+  padding: 1em
   background: $secondary-color
   border: 1px solid darken($secondary-color, 10%)
 
 button.btn-secondary
   // float: right
-  padding: 3%
+  padding: 1em
   background: $grey
   border: none
   border: 1px solid darken($grey, 10%)
