fixed minor css bugs and created workaround for tour bug (module could be clicked anytime during tour

--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -5,6 +5,7 @@
   @include grid-column(8.7)
   @include grid-shift(3)
   padding: 2%
+  margin-bottom: 8vh
 
 .srh-segment
   @include grid-column(6)
