--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,17 +1,24 @@
 <main class="container" [ngClass]="{'overlay': backdrop}">
+  <div class="test"></div>
+  <!-- welcome screen in the beginning -->
   <app-welcome-screen (onClickSkip)="removeBackdrop($event)" (onClickGo)="onWelcomeGo($event)"></app-welcome-screen>
 
+  <!-- side bar -->
   <app-sidebar [blurElement]="blurElement"></app-sidebar>
 
   <span class="home"(click)="srhTourActive = false"><img src="../assets/icons/home-black-building-symbol.svg" alt="home-button"/></span>
+
+  <!-- srh hospital overview -->
   <app-srh-tour *ngIf="srhTourActive"></app-srh-tour>
+
+  <!-- module display -->
   <section *ngIf="!srhTourActive" class="dashboard">
     <h1 [ngClass]="{'blur': backdrop}">Ihre Module</h1>
     <article class="container">
       <!-- Test mock modules -->
       <ul>
         <li *ngFor="let module of modules; let i = index">
-          <div (click)="srhTourActive = true" class="module-box" [ngClass]="{'active-box': blurElement==i || blurElement == -3}">
+          <div (click)="toggleSrhTour()" class="module-box" [ngClass]="{'active-box': blurElement==i || blurElement == -3}">
             <img src="{{module.thumbnail}}" />
             <h3>{{module.name}}</h3>
             <p *ngIf="blurElement == i" class="description-text">
