--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -2,8 +2,11 @@
 @import "../../variables"
 
 .overlay
-  background: #E6E6E6
+  background: #a0a0a0
   z-index: 10
+
+main.container
+  height: 100vh
 
 .home
   position: absolute
