styled ui in srh tour (not finished yet

--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -3,16 +3,12 @@
 
   <div class="srh-segment">
     <h2>Standort</h2>
-    <article class="srh-box">
-      <img src="../assets/images/doctor.png" alt="Doktor" />
-      <h3>Dr. Stefan Metzstein</h3>
-      <p>Doktor für Kardiologie und Neurologie</p>
-      <button class="btn-primary">Erfahre mehr</button>
+    <article class="srh-box-medium map">
     </article>
   </div>
   <div class="srh-segment">
     <h2>Arzt</h2>
-    <article class="srh-box">
+    <article class="srh-box-medium">
       <img src="../assets/images/doctor.png" alt="Doktor" />
       <div class="right-col">
         <h3>Dr. Stefan Metzstein</h3>
