--- a/src/styles.sass
+++ b/src/styles.sass
@@ -19,7 +19,7 @@ body
 
 h2
   font-weight: normal
-  margin: 15px auto 10px auto
+  margin: 1.2em auto 0.4em auto
 
 button
   font-size: $font-size-default
