--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -49,10 +49,11 @@ ul
       color: #34553C
       margin: .5vh 0 2vh 0
 
-    img
-      width: 100%
-      height: auto
-      filter: brightness(60%)
+  img
+    width: 100%
+    height: auto
+    filter: brightness(60%)
+    border-radius: 1.5%
 
 
   .active-box
