--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -6,13 +6,13 @@
   <article class="tagesplanbox">
     <img class="daily" src="../assets/icons/calendar-white.svg" alt="daily"/><p class="tagesplan">Tagesplan</p>
     <ul>
-      <li><span class="time">07:00</span> Frühstück</li>
+      <li><span class="time finished">07:00</span> Frühstück</li>
       <li>
-        <label class="strikethrough"><span class="time"><input type="checkbox" name="medicine" id="checked">
+        <label class="strikethrough"><span class="time finished"><input type="checkbox" name="medicine" id="checked">
             <span>1x Ibuprofen</span></span></label>
       </li>
-      <li><span class="time">09:00</span> Visite</li>
-      <li><span class="time">10:00</span> Termin Dr. Müller</li>
+      <li><span class="time finished">09:00</span> Visite</li>
+      <li><span class="time finished">10:00</span> Termin Dr. Müller</li>
       <li><span class="time">11:00</span> Anfang der Besuchzeit</li>
       <li><span class="time">13:00</span> Mittagessen</li>
       <li>
