--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -46,7 +46,7 @@
     margin-left: 0
 
 .map
-  background-image: url("../assets/images/srh-tour-map.jpg")
+  background-image: url("../assets/images/standort.jpg")
   background-size: cover
   background-repeat: no-repeat
   background-position: center
