--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -27,7 +27,7 @@
   margin-bottom: 4vh
 
 .daily
-  width: 3.5vw
+  width: 2.9vw
 
 ul
   list-style: none
@@ -48,8 +48,11 @@ ul
   padding: 2.5%
   margin-right: 1%
   border-radius: 10%
-  border: 1.5px solid mediumseagreen
+  border: 1.5px solid white
 
+.finished
+  border: 1.5px solid mediumseagreen
+  
 .checkmark
   opacity: 0
 
