--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -69,5 +69,7 @@ ul
 .description-text
   position: absolute
   right: 2%
-  bottom: 3%
-  color: black
+  bottom: 0%
+  color: white
+  font-size: 2.4em
+  z-index: 9999999999
