Tour starten desing changes

--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -20,11 +20,11 @@
   <div class="srh-segment-full">
     <h2>Entdecken Sie das Klinikum!</h2>
     <article class="srh-box special">
-      <p>
+      <p class="tourtext">
         Werden Sie daher selbst aktiv und lernen unser Waldklinikum hautnah kennen.
         Zum Abschluss gibt es ein gratis Getränk aus von der Cafeteria!
       </p>
-      <button class="btn-primary" (click)="srhTourStarted = true">Tour starten</button>
+      <button class="btn-primary right" (click)="srhTourStarted = true">Tour starten</button>
     </article>
   </div>
 
