--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -85,5 +85,21 @@
 
 
 .special
-  background: $primary-color
+  background: #5186DC
   color: white
+  border-radius: 1%
+
+.tourtext
+  width: 70%
+  margin-left: 26%
+  line-height: 1.3em
+
+.right
+  margin-right: 1em
+  margin-bottom: .1em
+  background: transparent
+  border: 2px solid #DBD7DC
+  margin-left: 78%
+  border-radius: 5%
+  color: white
+  padding: .7em
