--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -42,6 +42,7 @@ ul
 
 .tagesplan
   margin-left: 4%
+  font-size: 1.1em
 
 .time
   /*background-color: mediumseagreen
@@ -52,7 +53,7 @@ ul
 
 .finished
   border: 1.5px solid mediumseagreen
-  
+
 .checkmark
   opacity: 0
 
