--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -9,12 +9,12 @@
   <div class="srh-segment">
     <h2>Arzt</h2>
     <article class="srh-box-medium">
-      <img src="../assets/images/doctor.png" alt="Doktor" />
+      <img class="doc" src="../assets/images/doctor.png" alt="Doktor" />
       <div class="right-col">
         <h3>Dr. Stefan Metzstein</h3>
-        <p class="sub-h3">Doktor für Kardiologie und Neurologie</p>
+        <p class="sub-h3">Kardiologie und Neurologie</p>
       </div>
-      <button class="btn-primary">Erfahre mehr</button>
+      <button class="btn-primary doktorbutton">Erfahre mehr</button>
     </article>
   </div>
   <div class="srh-segment-full">
