--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -28,11 +28,37 @@
   position: relative
 
 .srh-box-medium
-  background: $bg-color-highlight
+  background: #608074
   border: 1px solid darken($light-grey, 5%)
   padding: 2%
   position: relative
   height: 180px
+
+h3
+  color: white
+  margin-left: 40%
+  margin-bottom: 0%
+  margin-top: 9%
+  width: 87%
+
+.doc
+  width: 37%
+  float: left
+  margin-top: 4%
+
+.sub-h3
+  color: white
+  margin-left: 40%
+  margin-bottom: 7.5%
+  line-height: 1.3em
+
+.doktorbutton
+  background: transparent
+  border: 2px solid #DBD7DC
+  color: white
+  border-radius: 5%
+  padding: .7em
+  margin-left: 52%
 
   .right-col
     // @include grid-column(6)
