Some design changes not finished

--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -60,6 +60,12 @@ h3
   padding: .7em
   margin-left: 52%
 
+.trophy
+  width: 12vw
+  position: absolute
+  top: 3vh
+  left: 2.5vw
+
   .right-col
     // @include grid-column(6)
     margin-left: 10px
@@ -91,10 +97,12 @@ h3
     transform: translateX(-50%)
 
 .food
-  background-image: url("../assets/images/srh-tour-food.jpg")
+  background-image: url("../assets/images/pexels-photo-373019.jpeg")
   background-size: cover
   background-position: center
   min-height: 250px
+
+.nahrungbutton
 
   button
     position: absolute
