--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
       </li>
       <li><span class="time finished">09:00</span> Visite</li>
       <li><span class="time finished">10:00</span> Termin Dr. Müller</li>
-      <li><span class="time">11:00</span> Anfang der Besuchzeit</li>
+      <li><span class="time upcoming">11:00</span> Anfang der Besuchzeit</li>
       <li><span class="time">13:00</span> Mittagessen</li>
       <li>
         <label class="strikethrough"><span class="time"><input type="checkbox" name="medicine" id="checked">
