--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -20,6 +20,7 @@
   <div class="srh-segment-full">
     <h2>Entdecken Sie das Klinikum!</h2>
     <article class="srh-box special">
+      <img class="trophy" src="../assets/icons/trophy.svg" alt="Trophäe"/>
       <p class="tourtext">
         Werden Sie daher selbst aktiv und lernen unser Waldklinikum hautnah kennen.
         Zum Abschluss gibt es ein gratis Getränk aus von der Cafeteria!
@@ -31,7 +32,7 @@
   <div class="srh-segment-small">
     <h2>Essen</h2>
     <article class="srh-box food">
-      <button class="btn-primary">Erfahre mehr</button>
+      <button class="btn-primary nahrungbutton">Erfahre mehr</button>
     </article>
   </div>
   <div class="srh-segment-small">
