--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -10,7 +10,7 @@ main.container
 
 h1
   margin-bottom: 7%
-  
+
 .home
   position: absolute
   right: 3%
@@ -19,6 +19,12 @@ h1
 
 .home > img
   width: 2.5vw
+
+.repeat-tour
+  position: absolute
+  right: 8%
+  top: 4%
+  z-index: 1000
 
 .blur
   filter: blur(3px)
@@ -72,7 +78,22 @@ ul
 .description-text
   position: absolute
   right: 2%
-  bottom: 0%
+  top: 0%
   color: white
   font-size: 2.4em
   z-index: 9999999999
+
+.description-0
+  top: 1%
+  right: 0
+  width: 65%
+
+.description-1
+  top: 1%
+  left: -30%
+  width: 65%
+
+.description-2
+  top: 1%
+  left: -10%
+  width: 65%
