--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -25,7 +25,7 @@
         Werden Sie daher selbst aktiv und lernen unser Waldklinikum hautnah kennen.
         Zum Abschluss gibt es ein gratis Getränk aus von der Cafeteria!
       </p>
-      <button class="btn-primary right" (click)="srhTourStarted = true">Tour starten</button>
+      <button class="btn-primary right" (click)="srhTourStarted = true">Rundgang starten</button>
     </article>
   </div>
 
