--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,6 +17,9 @@ body
 .special-font-2
   color: $secondary-color
 
+.success
+  background: $light-green !important
+
 h2
   font-weight: normal
   margin: 1.2em auto 0.4em auto
