--- a/src/styles.sass
+++ b/src/styles.sass
@@ -20,6 +20,9 @@ body
 .success
   background: $light-green !important
 
+.wrong
+  background: $warning-color !important
+
 h2
   font-weight: normal
   margin: 1.2em auto 0.4em auto
