--- a/src/variables.sass
+++ b/src/variables.sass
@@ -4,6 +4,7 @@ $primary-color: #0c3a78
 $secondary-color: #A2BB17
 
 $light-green: mediumseagreen
+$warning-color: #d9534f
 
 $light-grey: #FAFAFA
 $grey: #D8D8D8
