Design changes at Toursite

--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -32,6 +32,7 @@
   <div class="srh-segment-small">
     <h2>Essen</h2>
     <article class="srh-box food">
+      <img class="chef" src="../assets/icons/chef.svg" alt="Chef"/>
       <button class="btn-primary nahrungbutton">Erfahre mehr</button>
     </article>
   </div>
