--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -90,25 +90,29 @@ h3
   background-position: center
   min-height: 250px
 
-  button
-    position: absolute
-    bottom: 1em
-    left: 50%
-    transform: translateX(-50%)
 
 .food
-  background-image: url("../assets/images/pexels-photo-373019.jpeg")
+  /*background-image: url("../assets/images/pexels-photo-717130.jpeg")
   background-size: cover
   background-position: center
   min-height: 250px
+  background: linear-gradient(to bottom,#FF7143, #FF7143, #FF7143, #FF7163 100%)
+
+.chef
+  width: 4vw
+  margin-left: 39%
+  margin-top: 30%
+}
 
 .nahrungbutton
-
-  button
-    position: absolute
-    bottom: 1em
-    left: 50%
-    transform: translateX(-50%)
+  padding: .9em
+  background: transparent
+  border: 2px solid #DBD7DC
+  color: white
+  margin-left: 16%
+  margin-top: 3%
+  display: block
+  border-radius: 5%
 
 .info
   // max-height: 250px
