--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -85,23 +85,29 @@ h3
   height: 180px
 
 .culture
-  background-image: url("../assets/images/srh-tour-culture.jpg")
+  /*background-image: url("../assets/images/srh-tour-culture.jpg")
   background-size: cover
   background-position: center
   min-height: 250px
+  box-shadow: 0px -6px 8px 1px #999999
 
+.leftbox
+  background: linear-gradient(to bottom, #F2B552, #FF7163 100%)
 
 .food
   /*background-image: url("../assets/images/pexels-photo-717130.jpeg")
   background-size: cover
   background-position: center
   min-height: 250px
-  background: linear-gradient(to bottom,#FF7143, #FF7143, #FF7143, #FF7163 100%)
+  box-shadow: 0px -6px 8px 1px #999999
+
+.rightbox
+  background: linear-gradient(to bottom, #D7AA68, #FF7163 100%)
 
 .chef
   width: 4vw
   margin-left: 39%
-  margin-top: 30%
+  margin-top: 26%
 
 .nahrungbutton
   padding: .9em
@@ -116,6 +122,22 @@ h3
 .info
   // max-height: 250px
   padding: 1em
+  background: #F9D17A
+  /*background: linear-gradient(to bottom, #FDE763, #FF7163 100%)
+
+.wifi
+  width: 5vw
+  position: absolute
+  left: 5%
+  top: 5%
+
+.bezeichnung
+  margin: 0 0 3% 33%
+  font-weight: bolder
+
+.preise
+  font-size: .8em
+  margin: 0 0 20% 33%
 
   div
     padding: 1em 0
