Toursite final design

--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -125,11 +125,26 @@ h3
   background: #F9D17A
   /*background: linear-gradient(to bottom, #FDE763, #FF7163 100%)
 
+.topmargin
+  margin-top: 15%
+
 .wifi
   width: 5vw
   position: absolute
   left: 5%
-  top: 5%
+  top: 10%
+
+.telephone
+  width: 5vw
+  position: absolute
+  left: 5%
+  top: 39%
+
+.tv
+  width: 5vw
+  position: absolute
+  left: 5%
+  top: 68%
 
 .bezeichnung
   margin: 0 0 3% 33%
@@ -137,7 +152,10 @@ h3
 
 .preise
   font-size: .8em
-  margin: 0 0 20% 33%
+  margin: 0 0 35% 33%
+
+.letztes
+  margin-bottom: 30%
 
   div
     padding: 1em 0
