--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -39,17 +39,22 @@
   <div class="srh-segment-small">
     <h2>Info</h2>
     <article class="srh-box info">
+      <div class="topmargin">
       <div>
         <img class="wifi" src="../assets/icons/wifi.svg" alt="Wifi"/>
         <p class="bezeichnung">Internet</p>
         <p class="preise">50 Cent pro Tag</p>
       </div>
       <div>
-        <img class="wifi" src="../assets/icons/wifi.svg" alt="Wifi"/>
+        <img class="telephone" src="../assets/icons/telephone.svg" alt="Wifi"/>
+        <p class="bezeichnung">Telefon</p>
         <p class="preise">50 Cent pro Tag</p>
       </div>
       <div>
-        <i class="fa fa-television fa-3x" aria-hidden="true"></i> Fernsehen
+        <img class="tv" src="../assets/icons/computer-screen.svg" alt="Wifi"/>
+        <p class="bezeichnung">Fernsehen</p>
+        <p class="preise letztes">50 Cent pro Tag</p>
+      </div>
       </div>
     </article>
   </div>
