--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -5,7 +5,6 @@
   @include grid-column(8.7)
   @include grid-shift(3)
   padding: 2%
-  margin-bottom: 8vh
 
 .srh-segment
   @include grid-column(6)
@@ -78,7 +77,7 @@ h3
     margin-left: 0
 
 .map
-  background-image: url("../assets/images/standort.jpg")
+  /*background-image: url("../assets/images/standort.jpg")
   background-size: cover
   background-repeat: no-repeat
   background-position: center
