--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -1,20 +1,63 @@
 @import "../../../plugins/neat/neat"
 @import "../../variables"
 
+h1
+  color: #5186DC
+  font-size: 1.9em
+  margin: 1vh 0 5vh 0
+
 .srh-tour-game
+  height: 100vh
+  width: 100vw
   @include grid-column(8)
   @include grid-shift(3)
   padding: 2%
 
-ul
+.special-font-1
+  color: #608074
+  font-size: 1.7em
+  margin-bottom: 3vh
+  margin-left: 10%
+
+.punkte
+  position: absolute
+  right: 11%
+  top: 14%
+  background: #608074
+  color: white
+  padding: 0.25em
+  border-radius: 5%
+
+p
+  font-size: 1.1em
+  margin-bottom: 3vh
+  margin-left: 10%
+
+strong
+  font-size: 1.3em
+  margin-left: 10%
+
+.quizbox
   padding-left: 0
+  width: 80%
+  float: right
+  margin-top: 4%
+  margin-bottom: 4%
+  margin-right: 10%
+  font-size: 1.1em
 
   li
     list-style-type: none
-    background: white
+    background: lightpink
     padding: 3%
     margin: 2% 0
-    border: 1px solid darken($light-grey, 5%)
+    border: 2px solid #333333
+    border-radius: 3%
 
 button.btn-right
-  float: right
+  position: absolute
+  right: 11%
+  bottom: 20%
+  background: #999999
+  color: white
+  border-radius: 5%
