--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -45,14 +45,45 @@ strong
   margin-bottom: 4%
   margin-right: 10%
   font-size: 1.1em
+  text-align: center
 
   li
     list-style-type: none
-    background: lightpink
+    /*background: linear-gradient(to right, white, #F9D17A, #F9D17A, white)
+    background: #F9D17A
     padding: 3%
     margin: 2% 0
     border: 2px solid #333333
     border-radius: 3%
+    box-shadow: 0px 2px 1px 2px #999999
+
+.winner
+  position: absolute
+  width: 32vw
+  top: 0
+  left: 19vw
+
+.winnertext
+  position: absolute
+  top: 68vh
+  left: 5vw
+  font-size: 1.3em
+
+.special-font-2
+  position: absolute
+  top: 41vh
+  left: 20vw
+  font-size: 1.9em
+
+.winnerpoints
+  position: absolute
+  top: 54vh
+  left: 26vw
+  font-size: 1.3em
+  background: palevioletred
+  border-radius: 11%
+  padding: 1.8em
+  color: white
 
 button.btn-right
   position: absolute
