--- a/src/app/srh-tour/srh-tour.component.html
+++ b/src/app/srh-tour/srh-tour.component.html
@@ -46,12 +46,12 @@
         <p class="preise">50 Cent pro Tag</p>
       </div>
       <div>
-        <img class="telephone" src="../assets/icons/telephone.svg" alt="Wifi"/>
+        <img class="telephone" src="../assets/icons/phone.svg" alt="Phone"/>
         <p class="bezeichnung">Telefon</p>
         <p class="preise">50 Cent pro Tag</p>
       </div>
       <div>
-        <img class="tv" src="../assets/icons/computer-screen.svg" alt="Wifi"/>
+        <img class="tv" src="../assets/icons/computer-screen.svg" alt="Screen"/>
         <p class="bezeichnung">Fernsehen</p>
         <p class="preise letztes">50 Cent pro Tag</p>
       </div>
