--- a/src/app/srh-tour/srh-tour.component.sass
+++ b/src/app/srh-tour/srh-tour.component.sass
@@ -84,24 +84,20 @@ h3
   height: 180px
 
 .culture
-  /*background-image: url("../assets/images/srh-tour-culture.jpg")
   background-size: cover
   background-position: center
   min-height: 250px
-  box-shadow: 0px -6px 8px 1px #999999
 
 .leftbox
-  background: linear-gradient(to bottom, #F2B552, #FF7163 100%)
+  background: #608074
 
 .food
-  /*background-image: url("../assets/images/pexels-photo-717130.jpeg")
   background-size: cover
   background-position: center
   min-height: 250px
-  box-shadow: 0px -6px 8px 1px #999999
 
 .rightbox
-  background: linear-gradient(to bottom, #D7AA68, #FF7163 100%)
+  background: #608074
 
 .chef
   width: 4vw
@@ -121,8 +117,8 @@ h3
 .info
   // max-height: 250px
   padding: 1em
-  background: #F9D17A
-  /*background: linear-gradient(to bottom, #FDE763, #FF7163 100%)
+  background: #5DADE2
+  color: white
 
 .topmargin
   margin-top: 15%
@@ -130,28 +126,28 @@ h3
 .wifi
   width: 5vw
   position: absolute
-  left: 5%
-  top: 10%
+  left: 13%
+  top: 12%
 
 .telephone
   width: 5vw
   position: absolute
-  left: 5%
-  top: 39%
+  left: 13%
+  top: 40%
 
 .tv
   width: 5vw
   position: absolute
-  left: 5%
-  top: 68%
+  left: 13%
+  top: 69%
 
 .bezeichnung
-  margin: 0 0 3% 33%
+  margin: 21% 0 3% 43%
   font-weight: bolder
 
 .preise
   font-size: .8em
-  margin: 0 0 35% 33%
+  margin: 2% 0 35% 43%
 
 .letztes
   margin-bottom: 30%
