--- a/src/app/srh-tour-game/srh-tour-game.component.sass
+++ b/src/app/srh-tour-game/srh-tour-game.component.sass
@@ -50,7 +50,7 @@ strong
   li
     list-style-type: none
     /*background: linear-gradient(to right, white, #F9D17A, #F9D17A, white)
-    background: #F9D17A
+    background: ghostwhite
     padding: 3%
     margin: 2% 0
     border: 2px solid #333333
@@ -66,29 +66,47 @@ strong
 .winnertext
   position: absolute
   top: 68vh
-  left: 5vw
+  left: 0
   font-size: 1.3em
+  border: 2px solid #5186DC
+  padding: 1.73em
+  border-radius: 1%
 
 .special-font-2
   position: absolute
   top: 41vh
   left: 20vw
   font-size: 1.9em
+  color: #5186DC
 
 .winnerpoints
   position: absolute
   top: 54vh
-  left: 26vw
+  left: 35.5vw
   font-size: 1.3em
-  background: palevioletred
+  background: #608074
   border-radius: 11%
   padding: 1.8em
   color: white
 
+
+.medalsmall
+  position: absolute
+  width: 4.7vw
+  top: 72vh
+  left: 58vw
+
+.trophysmall
+  position: absolute
+  width: 10vw
+  top: 53.5vh
+  left: 23.5vw
+
 button.btn-right
   position: absolute
-  right: 11%
-  bottom: 20%
+  right: 0
+  bottom: 10%
   background: #999999
   color: white
   border-radius: 5%
+
