--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -26,13 +26,6 @@ h1
   top: 4%
   z-index: 1000
 
-.blur
-  filter: blur(3px)
-  -o-filter: blur(3px)
-  -ms-filter: blur(3px)
-  -moz-filter: blur(3px)
-  -webkit-filter: blur(3px)
-
 ul
   list-style: none
   padding: 0 0 0 0
@@ -48,11 +41,11 @@ ul
     margin-left: 0
     margin-right: 20px
 
-    filter: blur(3px)
-    -o-filter: blur(3px)
-    -ms-filter: blur(3px)
-    -moz-filter: blur(3px)
-    -webkit-filter: blur(3px)
+    filter: blur(15px)
+    -o-filter: blur(15px)
+    -ms-filter: blur(15px)
+    -moz-filter: blur(15px)
+    -webkit-filter: blur(15px)
 
     h3
       color: #34553C
@@ -77,23 +70,37 @@ ul
 
 .description-text
   position: absolute
-  right: 2%
-  top: 0%
+  right: 22%
+  top: 43%
   color: white
-  font-size: 2.4em
   z-index: 9999999999
+  width: 70%
+  font-size: 1.8em
+  background: #608074
+  border-radius: 2%
+  padding: 1em
 
 .description-0
-  top: 1%
-  right: 0
-  width: 65%
+  top: 44%
+  right: -3%
 
 .description-1
-  top: 1%
-  left: -30%
-  width: 65%
+  top: 48%
+  left: 10%
 
 .description-2
-  top: 1%
-  left: -10%
-  width: 65%
+  top: 39%
+  left: -16%
+
+.description-3
+  top: 82.5%
+  left: 28%
+
+.description-4
+  top: 76.5%
+  left: -37%
+  width: 60%
+
+.description-5
+  top: 53%
+  left: -16%
