changed sidebar description

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
 
       <!-- description text for sidebar ! -->
       <p *ngIf="blurElement == -1" class="description-text">
-        Hier sind alle möglichen Sachen für den heutigen Tag zu sehen.
+        Hier befindet sich Ihre Tagesübersicht. Damit haben Sie alles im Blick, was für heute ansteht.
       </p>
 
     </article>
