added animations on welcome screen

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
   <app-welcome-screen [patientName]="patientName" (onClickSkip)="removeBackdrop($event)" (onClickGo)="onWelcomeGo($event)"></app-welcome-screen>
 
   <!-- side bar -->
-  <app-sidebar [patientName]="patientName" [blurElement]="blurElement"></app-sidebar>
+  <app-sidebar [@blurState]="blur" [patientName]="patientName" [blurElement]="blurElement"></app-sidebar>
 
   <span class="home" (click)="srhTourActive = false"><img src="../assets/icons/home-black-building-symbol.svg" alt="home-button"/></span>
 
