--- a/src/app/dashboard/dashboard.component.sass
+++ b/src/app/dashboard/dashboard.component.sass
@@ -45,7 +45,8 @@ ul
     -o-filter: blur(15px)
     -ms-filter: blur(15px)
     -moz-filter: blur(15px)
-    -webkit-filter: blur(15px)
+    // -webkit-filter: blur(15px)
+    transition: filter 500ms ease-in-out
 
     h3
       color: #34553C
