--- a/src/app/sidebar/sidebar.component.sass
+++ b/src/app/sidebar/sidebar.component.sass
@@ -13,7 +13,8 @@
   -o-filter: blur(15px)
   -ms-filter: blur(15px)
   -moz-filter: blur(15px)
-  -webkit-filter: blur(15px)
+  // -webkit-filter: blur(15px)
+  transition: filter 500ms ease-in-out
 
 .logo
   width: 10vw
